[package]
name = "citrus-common"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

description = "Common tools for working with 100% Orange Juice fields."
license = "Unlicense"
readme = "README.md"

[features]
default = []

[dependencies]
num_enum = "0.5"
base64 = { version = "0.13", optional = true }
